force-app/main/default/objects/Product_Price__c/Product_Price__c.object-meta.xml
<CustomObject>
    <label>Precio de Producto</label>
    <nameField>
        <displayFormat>PRE-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Precios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>