force-app/main/default/objects/Product_Price__c/fields/Dollar_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Cost__c</fullName>
    <label>Compra de Dolar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>