force-app/main/default/objects/Product_Price__c/fields/External_Shipping_USD__c.field-meta.xml
<CustomField>
    <fullName>External_Shipping_USD__c</fullName>
    <label>Flete Externo USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>