force-app/main/default/objects/Product_Price__c/fields/Internal_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Internal_Shipping__c</fullName>
    <label>Flete Interno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>