force-app/main/default/objects/Product_Price__c/fields/Price_Batch__c.field-meta.xml
<CustomField>
    <fullName>Price_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote de Precios</label>
    <referenceTo>Price_Batch__c</referenceTo>
    <relationshipLabel>Precios</relationshipLabel>
    <relationshipName>Precios</relationshipName>
    <type>Lookup</type>
</CustomField>