force-app/main/default/objects/Product_Price__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Margen de Ganancia</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>