force-app/main/default/objects/Product_Price__c/fields/Unit_Cost_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_GTQ__c</fullName>
    <label>Costo Unitario en Quetzales</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>