force-app/main/default/objects/Product_Price__c/fields/Unit_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_USD__c</fullName>
    <label>Costo Unitario en Dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>