force-app/main/default/objects/Product_Price__c/fields/Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_USD__c</fullName>
    <formula>if ( Dollar_Cost__c != 0, Unit_Price_GTQ__c /  Dollar_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>