force-app/main/default/objects/Product_Price__c/validationRules/Dollar.validationRule-meta.xml
<ValidationRule>
    <fullName>Dollar</fullName>
    <active>true</active>
    <errorConditionFormula>Dollar_Cost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Dollar_Cost__c</errorDisplayField>
    <errorMessage>La tasa de compra de dolar no puede ser menor a 0</errorMessage>
</ValidationRule>