force-app/main/default/objects/Product_Price__c/validationRules/External_Shipping_GTQ.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Shipping_GTQ</fullName>
    <active>true</active>
    <errorConditionFormula>External_Shipping__c &lt; 0</errorConditionFormula>
    <errorDisplayField>External_Shipping__c</errorDisplayField>
    <errorMessage>El flete externo en Quetzales no puede ser menor a 0</errorMessage>
</ValidationRule>