force-app/main/default/objects/Product_Price__c/validationRules/External_Shipping_USD.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Shipping_USD</fullName>
    <active>true</active>
    <errorConditionFormula>External_Shipping_USD__c &lt; 0</errorConditionFormula>
    <errorDisplayField>External_Shipping_USD__c</errorDisplayField>
    <errorMessage>El flete externos en Dolares no puede ser menor a 0</errorMessage>
</ValidationRule>