force-app/main/default/objects/Product_Price__c/validationRules/Internal_Shipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Shipping</fullName>
    <active>true</active>
    <errorConditionFormula>Internal_Shipping__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Internal_Shipping__c</errorDisplayField>
    <errorMessage>El flete interno no puede ser menor a 0</errorMessage>
</ValidationRule>