force-app/main/default/objects/Product_Price__c/validationRules/Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>La cantidad no puede ser menor a 0</errorMessage>
</ValidationRule>