force-app/main/default/objects/Product_Price__c/validationRules/Taxes.validationRule-meta.xml
<ValidationRule>
    <fullName>Taxes</fullName>
    <active>true</active>
    <errorConditionFormula>Taxes__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Taxes__c</errorDisplayField>
    <errorMessage>Los impuestos aduanales no pueden ser menores a 0</errorMessage>
</ValidationRule>