force-app/main/default/objects/Product_Price__c/validationRules/Unit_Cost_GTQ.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Cost_GTQ</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Cost_GTQ__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Cost_GTQ__c</errorDisplayField>
    <errorMessage>El costo unitario en Quetzales no puede ser menor a 0</errorMessage>
</ValidationRule>