force-app/main/default/objects/Product_Price__c/validationRules/Unit_Cost_USD.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Cost_USD</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Cost_USD__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Cost_USD__c</errorDisplayField>
    <errorMessage>El costo unitario en Dolares no puede ser menor a 0</errorMessage>
</ValidationRule>