force-app/main/default/objects/Product_Price__c/validationRules/Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price_GTQ__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price_GTQ__c</errorDisplayField>
    <errorMessage>El precio de venta no puede ser menor a 0</errorMessage>
</ValidationRule>